--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "c/azure-c-shared-utility"]
 	path = c/azure-c-shared-utility
 	url = https://github.com/mussier/azure-c-shared-utility.git
+	branch = enable_gcc4.4 
 [submodule "azure-c-shared-utility"]
 	path = azure-c-shared-utility
 	url = https://github.com/mussier/azure-c-shared-utility.git
+	branch = enable_gcc4.4
